--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@toruslabs/eccrypto": "^3.0.0",
     "@web3auth/web3auth": "^2.1.3",
     "autoprefixer": "10.4.14",
+    "dayjs": "^1.11.10",
     "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -30,6 +31,7 @@
     "next": "^12.1.5",
     "postcss": "8.4.24",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-moralis": "^1.4.0",
     "react-scripts": "^4.0.3",
